--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-// import '../styles/main.css';
+import '../styles/main.css';
 
 const { title } = Astro.props;
 ---
@@ -41,7 +41,7 @@ const { title } = Astro.props;
 			<link rel="stylesheet" type="text/css" href="/vendor/wow/animate.css" media="all">
 			<link rel="stylesheet" type="text/css" href="/css/custom-animation.css" media="all">
 			<link rel="stylesheet" type="text/css" href="/vendor/nice-select/nice-select.css" media="all">
-			<link rel="stylesheet" type="text/css" href="/css/style.css">
+			<!-- <link rel="stylesheet" type="text/css" href="/css/style.css"> -->
 
 
 		<title>{title}</title>
