--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,12 +4,12 @@
 			<div class="inner-wrapper m-auto max-w-[1170px]">
 				<div class="flex flex-wrap mx-[-12px]">
 					<div class="xl:w-3/12 lg:w-3/12 w-full flex-[0_0_auto] px-[12px] max-w-full footer-intro mb-10 ">
-						<div class="logo"><a href="index.html"><img src="images/logo/logo_01.png" alt="" width="95"></a></div>
+						<div class="logo"><a href="index.html"><img src="images/logo.svg" class="xsm:h-auto h-12 w-auto xsm:w-full" alt="" width="95"></a></div>
 						<a href="#" class="email tran3s text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] leading-[1.67em] mt-[35px] mb-[15px] md:mt-[10px] sm:mt-[10px] xsm:mt-[10px] hover:underline hover:text-black">januinc@company.com</a> <br>
-						<a href="#" class="mobile tran3s text-[20px] lg:text-[18px] md:text-[18px] sm:text-[18px] xsm:text-[18px] font-medium text-[color:var(--prime-two)] hover:underline">+757 699-4478</a>
+						<a href="#" class="mobile tran3s text-[20px] lg:text-[18px] md:text-[18px] sm:text-[18px] xsm:text-[18px] font-medium text-[#BC46E2] hover:underline">+757 699-4478</a>
 					</div>
 					<div class="xl:w-3/12 lg:w-3/12 md:w-4/12 sm:w-4/12 w-full flex-[0_0_auto] px-[12px] max-w-full !ml-auto mb-[30px]">
-						<h5 class="footer-title text-black font-medium text-[24px] mb-5 md:text-[20px] md:mb-[10px] sm:text-[20px] sm:mb-[10px] xsm:text-[20px] xsm:mb-[10px]">Links</h5>
+						<h5 class="font-Recoleta footer-title text-black font-medium text-[24px] mb-5 md:text-[20px] md:mb-[10px] sm:text-[20px] sm:mb-[10px] xsm:text-[20px] xsm:mb-[10px]">Links</h5>
 						<ul class="footer-nav-link mb-0 pl-0 list-none ">
 							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="index.html">Home</a></li>
 							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="pricing.html">Pricing</a></li>
@@ -20,7 +20,7 @@
 						</ul>
 					</div>
 					<div class="xl:w-3/12 lg:w-3/12 md:w-4/12 sm:w-4/12 w-full flex-[0_0_auto] px-[12px] max-w-full mb-[30px]">
-						<h5 class="footer-title text-black font-medium text-[24px] mb-5 md:text-[20px] md:mb-[10px] sm:text-[20px] sm:mb-[10px] xsm:text-[20px] xsm:mb-[10px]">Legal</h5>
+						<h5 class="footer-title font-Recoleta text-black font-medium text-[24px] mb-5 md:text-[20px] md:mb-[10px] sm:text-[20px] sm:mb-[10px] xsm:text-[20px] xsm:mb-[10px]">Legal</h5>
 						<ul class="footer-nav-link mb-0 pl-0 list-none ">
 							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="faq.html">Terms of use</a></li>
 							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="faq.html">Terms & conditions</a></li>
@@ -29,7 +29,7 @@
 						</ul>
 					</div>
 					<div class="xl:w-2/12 lg:w-3/12 md:w-4/12 sm:w-4/12 w-full flex-[0_0_auto] px-[12px] max-w-full mb-[30px]">
-						<h5 class="footer-title text-black font-medium text-[24px] mb-5 md:text-[20px] md:mb-[10px] sm:text-[20px] sm:mb-[10px] xsm:text-[20px] xsm:mb-[10px]">Products</h5>
+						<h5 class="footer-title font-Recoleta text-black font-medium text-[24px] mb-5 md:text-[20px] md:mb-[10px] sm:text-[20px] sm:mb-[10px] xsm:text-[20px] xsm:mb-[10px]">Products</h5>
 						<ul class="footer-nav-link mb-0 pl-0 list-none ">
 							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="blog-details.html">Take the tour</a></li>
 							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="blog-details.html">Live chat</a></li>
@@ -42,8 +42,8 @@
 				</div>
 			</div> <!-- /.inner-wrapper -->
 		</div>
-		<div class="shapes shape-one rounded-[50%] absolute z-[-1] w-60 h-60 opacity-70 top-[-120px] left-[-120px] bg-[#FFBF44] md:w-[100px] md:h-[100px] md:top-[-50px] md:-left-3 sm:w-[100px] sm:h-[100px] sm:top-[-50px] sm:-left-3 xsm:w-[100px] xsm:h-[100px] xsm:top-[-50px] xsm:-left-3"></div>
-		<div class="shapes shape-two rounded-[50%] absolute z-[-1] w-[136px] h-[136px] opacity-[0.65] right-[-70px] bottom-[-55px] bg-[#15B9FF] md:w-[50px] md:h-[50px] md:-right-3 md:bottom-0 sm:w-[50px] sm:h-[50px] sm:-right-3 sm:bottom-0 xsm:w-[50px] xsm:h-[50px] xsm:-right-3 xsm:bottom-0"></div>
+		<div class="shapes shape-one rounded-[50%] absolute z-[-1] xxl:w-60 xxl:h-60 xl:w-52 xl:h-52 opacity-70 xxl:top-[-160px] xl:top-[-135px] left-[-120px] bg-[#FFBF44] md:w-[100px] md:h-[100px] md:top-[-50px] md:-left-3 sm:w-[100px] sm:h-[100px] sm:top-[-50px] sm:-left-3 xsm:w-[100px] xsm:h-[100px] xsm:top-[-50px] xsm:-left-3"></div>
+		<div class="shapes shape-two rounded-[50%] absolute z-[-1] xxl:w-[136px] xl:xl:w-28 xl:h-28 xxl:h-[136px] opacity-[0.65] right-[-70px] xxl:bottom-[-55px] xl:-bottom-8 bg-[#15B9FF] md:w-[50px] md:h-[50px] md:-right-3 md:bottom-0 sm:w-[50px] sm:h-[50px] sm:-right-3 sm:bottom-0 xsm:w-[50px] xsm:h-[50px] xsm:-right-3 xsm:bottom-0"></div>
 		<img src="images/lazy.svg" data-src="images/shape/shape_42.svg" alt="" class="lazy-img shapes shape-three absolute z-[-1] right-[-4%] top-[-14%] md:!hidden sm:!hidden xsm:!hidden">
 		<img src="images/lazy.svg" data-src="images/shape/shape_43.svg" alt="" class="lazy-img shapes shape-four absolute z-[-1] left-[-6%] bottom-[16%] md:!hidden sm:!hidden xsm:!hidden">
 	</div> <!-- /.top-footer -->
