--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -244,13 +244,14 @@ import Footer from '@components/Footer.astro';
 							<div class="sc-title-two uppercase text-[15px] tracking-[2px] text-[color:var(--prime-ten)] pb-4 md:text-[13px] sm:text-[13px] xsm:text-[13px]">WHY US</div>
 							<h2 class="font-Recoleta font-normal text-black xl:text-6xl lg:text-5xl text-4xl">Here's what you gonna get.</h2>
 						</div> <!-- /.title-style-ten -->
-						<p class="text-[24px] lg:text-[18px] md:text-[18px] sm:text-[18px] xsm:text-[18px] text-black pt-5 pb-[30px] lg:pt-[10px] md:pt-[10px] sm:pt-[10px] xsm:pt-[10px] lg:pb-5 md:pb-5 sm:pb-5 xsm:pb-5 mb-0">Turn your business into a sales machine today with lorem Things go wrong have questions.</p>
+						<p class="lg:text-xl xl:text-xl text-black pt-5 pb-[30px] lg:pt-[10px] md:pt-[10px] sm:pt-[10px] xsm:pt-[10px] lg:pb-5 md:pb-5 sm:pb-5 xsm:pb-5 mb-0">Turn your business into a sales machine today with lorem Things go wrong have questions.</p>
 						<ul class=" mb-0 pl-0 list-none list-item">
-							<li class=" text-[24px] text-black relative mb-5 pl-10 before:content-[url(../images/icon/icon_93.svg)] before:absolute before:left-0 before:top-0 lg:text-[18px] md:text-[18px] sm:text-[18px] xsm:text-[18px] ">Amazing communication.</li>
-							<li class=" text-[24px] text-black relative mb-5 pl-10 before:content-[url(../images/icon/icon_93.svg)] before:absolute before:left-0 before:top-0 lg:text-[18px] md:text-[18px] sm:text-[18px] xsm:text-[18px] ">Best trending designing experience.</li>
-							<li class=" text-[24px] text-black relative mb-5 pl-10 before:content-[url(../images/icon/icon_93.svg)] before:absolute before:left-0 before:top-0 lg:text-[18px] md:text-[18px] sm:text-[18px] xsm:text-[18px] ">Email &amp; Live chat.</li>
-							<li class=" text-[24px] text-black relative mb-5 pl-10 before:content-[url(../images/icon/icon_93.svg)] before:absolute before:left-0 before:top-0 lg:text-[18px] md:text-[18px] sm:text-[18px] xsm:text-[18px] ">Email &amp; Live chat.</li>
-							<li class=" text-[24px] text-black relative mb-5 pl-10 before:content-[url(../images/icon/icon_93.svg)] before:absolute before:left-0 before:top-0 lg:text-[18px] md:text-[18px] sm:text-[18px] xsm:text-[18px] ">Email &amp; Live chat.</li>
+							<li class="lg:text-xl xl:text-xl text-black relative mb-5 pl-10 before:content-[url(../images/icon/icon_93.svg)] before:absolute before:left-0 before:top-0 lg:text-[18px] ">Very little custom CSS as we always try to keep everything inside the Tailwind config.
+							</li>
+							<li class="lg:text-xl xl:text-xl text-black relative mb-5 pl-10 before:content-[url(../images/icon/icon_93.svg)] before:absolute before:left-0 before:top-0 lg:text-[18px] ">HTML markup that is responsive and works on all modern browsers (Chrome, Safari, Firefox, iOS Safari, Chrome Android)
+							</li>
+							<li class="lg:text-xl xl:text-xl text-black relative mb-5 pl-10 before:content-[url(../images/icon/icon_93.svg)] before:absolute before:left-0 before:top-0 lg:text-[18px] ">A zip file with all the files and a package.json that will run your project locally with just 1 command.
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -421,12 +422,13 @@ import Footer from '@components/Footer.astro';
 						<div class="accordion-item rounded-none border-0  bg-transparent ">
 							<div class="accordion-header" id="headingOne">
 								 <button class="accordion-button collapsed text-[24px] font-medium text-black shadow-none transition-all duration-[0.2s] ease-[ease-in-out] pl-10 pr-[45px] py-[30px] border-b-[rgba(0,0,0,0.08)] border-b border-solid bg-transparent outline-0 after:content-['+'] after:text-[24px] after:w-[30px] after:h-[30px] after:text-center after:font-normal after:leading-[30px] after:bg-white after:ml-auto relative flex items-center w-full text-left rounded-none border-0 lg:text-[18px] lg:p-[18px_15px] md:text-[18px] md:p-[18px_15px] sm:text-[18px] sm:p-[18px_15px] xsm:text-[18px] leading-[1.67em] xsm:p-[18px_15px]" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-									<span class=" mr-5">01.</span> How does the free trial work?
+									<span class=" mr-5">01.</span> What are our prices?
 								 </button>
 							</div>
 							<div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionOne">
 								<div class="accordion-body text-[rgba(255,255,255,0.8)] p-[0_100px_40px_103px] bg-[#0F0F0F] lg:p-[0_45px_25px_60px] md:p-[0_45px_25px_60px] sm:p-[0_45px_25px_60px] xsm:p-[0_45px_25px_60px]">
-									<p class=" text-[18px] leading-[1.67em] m-0">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+									<p class=" text-[18px] leading-[1.67em] m-0">Our pricing starts at $250 for the first page and $120 per additional page after and will vary depending on the complexity of the design and the amount of pages or "screens" we need to code.
+									</p>
 								</div>
 							</div>
 						 </div>
@@ -438,43 +440,71 @@ import Footer from '@components/Footer.astro';
 							</div>
 							<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionOne">
 								 <div class="accordion-body text-[rgba(255,255,255,0.8)] p-[0_100px_40px_103px] bg-[#0F0F0F] lg:p-[0_45px_25px_60px] md:p-[0_45px_25px_60px] sm:p-[0_45px_25px_60px] xsm:p-[0_45px_25px_60px]">
-									<p class=" text-[18px] leading-[1.67em] m-0">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+									<p class=" text-[18px] leading-[1.67em] m-0">What are your turnaround times on projects?
+
+										The best way to get an ETA is to fill out the form above and we'll get back to you with a quote and ETA ASAP.</p>
 								</div>
 							</div>
 						 </div>
 						 <div class="accordion-item rounded-none border-0  bg-transparent ">
 							<div class="accordion-header" id="headingThree">
 									<button class="accordion-button text-[24px] font-medium text-black shadow-none transition-all duration-[0.2s] ease-[ease-in-out] pl-10 pr-[45px] py-[30px] border-b-[rgba(0,0,0,0.08)] border-b border-solid bg-transparent outline-0 after:content-['+'] after:text-[24px] after:w-[30px] after:h-[30px] after:text-center after:font-normal after:leading-[30px] after:bg-white after:ml-auto relative flex items-center w-full text-left rounded-none border-0 lg:text-[18px] lg:p-[18px_15px] md:text-[18px] md:p-[18px_15px] sm:text-[18px] sm:p-[18px_15px] xsm:text-[18px] leading-[1.67em] xsm:p-[18px_15px]" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-									<span class=" mr-5">03.</span> What do you look for in a founding team?
+									<span class=" mr-5">03.</span> What design file formats can you work with?
 								 </button>
 							</div>
 							<div id="collapseThree" class="accordion-collapse collapse show" aria-labelledby="headingThree" data-bs-parent="#accordionOne">
 								<div class="accordion-body text-[rgba(255,255,255,0.8)] p-[0_100px_40px_103px] bg-[#0F0F0F] lg:p-[0_45px_25px_60px] md:p-[0_45px_25px_60px] sm:p-[0_45px_25px_60px] xsm:p-[0_45px_25px_60px]">
-									<p class=" text-[18px] leading-[1.67em] m-0">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+									<p class=" text-[18px] leading-[1.67em] m-0">
+										We work with Photoshop (PSD), Figma, Adobe XD and Sketch designs
+										and with design hand-off tools like Invision and Zeplin.
+									</p>
 								</div>
 							</div>
 						</div>
 						<div class="accordion-item rounded-none border-0  bg-transparent ">
 							<div class="accordion-header" id="headingFour">
 									<button class="accordion-button collapsed text-[24px] font-medium text-black shadow-none transition-all duration-[0.2s] ease-[ease-in-out] pl-10 pr-[45px] py-[30px] border-b-[rgba(0,0,0,0.08)] border-b border-solid bg-transparent outline-0 after:content-['+'] after:text-[24px] after:w-[30px] after:h-[30px] after:text-center after:font-normal after:leading-[30px] after:bg-white after:ml-auto relative flex items-center w-full text-left rounded-none border-0 lg:text-[18px] lg:p-[18px_15px] md:text-[18px] md:p-[18px_15px] sm:text-[18px] sm:p-[18px_15px] xsm:text-[18px] leading-[1.67em] xsm:p-[18px_15px]" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-									<span class=" mr-5">04.</span> Do you recommend Pay as you go or Pre pay?
+									<span class=" mr-5">04.</span> What browsers do you support?
 								 </button>
 							</div>
 							<div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionOne">
 								<div class="accordion-body text-[rgba(255,255,255,0.8)] p-[0_100px_40px_103px] bg-[#0F0F0F] lg:p-[0_45px_25px_60px] md:p-[0_45px_25px_60px] sm:p-[0_45px_25px_60px] xsm:p-[0_45px_25px_60px]">
-									<p class=" text-[18px] leading-[1.67em] m-0">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+									<p class=" text-[18px] leading-[1.67em] m-0">
+										We currently support the latest versions of Google Chrome, Safari,
+										Firefox, and Edge.
+									</p>
 								</div>
 							</div>
 						</div>
 						<div class="accordion-item rounded-none border-0  bg-transparent ">
 							<div class="accordion-header" id="headingFive">
 									<button class="accordion-button collapsed text-[24px] font-medium text-black shadow-none transition-all duration-[0.2s] ease-[ease-in-out] pl-10 pr-[45px] py-[30px] bg-transparent outline-0 after:content-['+'] after:text-[24px] after:w-[30px] after:h-[30px] after:text-center after:font-normal after:leading-[30px] after:bg-white after:ml-auto relative flex items-center w-full text-left rounded-none lg:text-[18px] lg:p-[18px_15px] md:text-[18px] md:p-[18px_15px] sm:text-[18px] sm:p-[18px_15px] xsm:text-[18px] leading-[1.67em] xsm:p-[18px_15px]" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-									<span class=" mr-5">05.</span> What do I get for $0 with my plan?
+									<span class=" mr-5">05.</span> Do you offer revisions?
 								 </button>
 							</div>
 							<div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionOne">
 								<div class="accordion-body text-[rgba(255,255,255,0.8)] p-[0_100px_40px_103px] bg-[#0F0F0F] lg:p-[0_45px_25px_60px] md:p-[0_45px_25px_60px] sm:p-[0_45px_25px_60px] xsm:p-[0_45px_25px_60px]">
-									<p class=" text-[18px] leading-[1.67em] m-0">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+									<p class=" text-[18px] leading-[1.67em] m-0">
+										We offer 3 round of revisions. Any bug fixes and small changes are
+										free. Any other change will be billed separately.
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item rounded-none border-0  bg-transparent ">
+							<div class="accordion-header" id="headingFive">
+									<button class="accordion-button collapsed text-[24px] font-medium text-black shadow-none transition-all duration-[0.2s] ease-[ease-in-out] pl-10 pr-[45px] py-[30px] bg-transparent outline-0 after:content-['+'] after:text-[24px] after:w-[30px] after:h-[30px] after:text-center after:font-normal after:leading-[30px] after:bg-white after:ml-auto relative flex items-center w-full text-left rounded-none lg:text-[18px] lg:p-[18px_15px] md:text-[18px] md:p-[18px_15px] sm:text-[18px] sm:p-[18px_15px] xsm:text-[18px] leading-[1.67em] xsm:p-[18px_15px]" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+									<span class=" mr-5">06.</span> Do you also do React/Vue/Svelte work?
+								 </button>
+							</div>
+							<div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionOne">
+								<div class="accordion-body text-[rgba(255,255,255,0.8)] p-[0_100px_40px_103px] bg-[#0F0F0F] lg:p-[0_45px_25px_60px] md:p-[0_45px_25px_60px] sm:p-[0_45px_25px_60px] xsm:p-[0_45px_25px_60px]">
+									<p class=" text-[18px] leading-[1.67em] m-0">
+										Yes, we can do React/Vue/Svelte work as well for an additional fee
+										per page but keep in mind we keep the logic to a minimum since our
+										main focus is on the markup, not the business logic of the
+										components.
+									</p>
 								</div>
 							</div>
 						</div>
