--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,7 @@ import Footer from '@components/Footer.astro';
 <Layout title='Astro'>
 	<Header />
 
-	<div class="pt-36 lg:pt-44 xl:pt-52 mb-24">
+	<div class="pt-32 md:pt-36 lg:pt-44 xl:pt-52 mb-16 md:mb-20 lg:mb-24 xl:mb-24">
 		<div class="fancy-feature-fiftyOne relative">
 			<div class="container">
 				<div class="flex flex-wrap">
@@ -15,7 +15,7 @@ import Footer from '@components/Footer.astro';
 						<div class="title-style-five text-center">
 							<div class="sc-title-two italic relative inline-block text-[17px] text-[color:var(--prime-ten)] mb-5 pl-10 before:content-[''] before:absolute before:w-6 before:h-px before:left-0 before:top-3.5 before:bg-[var(--prime-ten)]">About</div>
 							<h2 class="font-Recoleta font-normal text-black xl:text-6xl lg:text-5xl text-4xl">A little about Us</h2>
-							<p class=" text-base lg:text-lg xl:text-xl pt-7">We're a team of sisters, Vivian and Daniela, with more than 10 years of experience combined, doing front-end development. Even better yet, we've been using Tailwind CSS daily since 2018 and we love it.
+							<p class=" text-base lg:text-lg xl:text-xl pt-7 mb-0">We're a team of sisters, Vivian and Daniela, with more than 10 years of experience combined, doing front-end development. Even better yet, we've been using Tailwind CSS daily since 2018 and we love it.
 							</p>
 						</div>
 					</div>
@@ -101,15 +101,15 @@ import Footer from '@components/Footer.astro';
 		</div> <!-- /.container -->
 	</div>
 
-	<div class="fancy-feature-fiftyNine relative mt-[140px] xl:mb-36 lg:mb-28 mb-24 wow fadeInUp">
+	<div class="fancy-feature-fiftyNine relative mt-16 sm:mt-20 md:mt-20 lg:mt-20 xl:mt-28 xl:mb-36 lg:mb-28 mb-24 wow fadeInUp">
 		<div class="container">
 			<div class="title-style-ten text-center wow fadeInUp">
-				<h2 class="main-title font-Recoleta font-normal  text-black  tracking-[0] leading-[1.17em] 2xl:text-[54px] md:text-[35px] sm:text-[35px] xsm:text-[35px] ">What matters most: <span class="relative"> Our Values.<img class=" absolute z-[-1] right-0 bottom-[9px]" src="images/shape/shape_188.svg" alt=""></span></h2>
+				<h2 class="main-title font-Recoleta font-normal  text-black  tracking-[0] leading-[1.17em] 2xl:text-[54px] md:text-[35px] sm:text-[35px] xsm:text-[35px] ">What matters most: <span class="relative"> Our Values.<img class=" absolute z-[-1] right-0 bottom-1" src="images/shape/shape_188.svg" alt=""></span></h2>
 				<p class=" text-[24px] 2xl:text-[22px] lg:text-[19px] md:text-[19px] sm:text-[19px] xsm:text-[19px]  text-black text-center  !leading-[2]  mt-[25px]  md:mt-5 sm:mt-5 xsm:mt-5 wow fadeInUp">At jano, we’ve seen again and again how the seemingly simple act of creating can be a force for growth, change,and discovery in people’s lives. We want to inspire and multiply the kind of creative exploration that furthers expression, learning and application.</p>
 			</div>
 
 			<div class="card-wrapper  pt-[45px] lg:pt-5 md:pt-5 sm:pt-5 xsm:pt-5 pb-[55px] lg:pb-[30px] md:pb-[30px] sm:pb-[30px] xsm:pb-[30px] mt-[85px] lg:mt-[50px] md:mt-[50px] sm:mt-[50px] xsm:mt-[50px] border-y-2 border-y-black border-solid">
-				<div class="grid grid-cols-3 justify-center gap-8">
+				<div class="grid md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 justify-center gap-8">
 					<div class="card-style-twentySix text-center wow fadeInUp">
 						<div class="icon rounded-[50%] m-auto flex items-center justify-center w-[75px] h-[75px] bg-black lg:w-[55px] lg:h-[55px] lg:p-[15px] md:w-[55px] md:h-[55px] md:p-[15px] sm:w-[55px] sm:h-[55px] sm:p-[15px] xsm:w-[55px] xsm:h-[55px] xsm:p-[15px]"><img src="images/lazy.svg" data-src="images/icon/icon_175.svg" alt="" class="lazy-img"></div>
 						<h5 class=" text-black mt-10 lg:mt-[30px] md:mt-[30px] sm:mt-[30px] xsm:mt-[30px] mb-[5px] lg:text-[20px] md:text-[20px] sm:text-[20px] xsm:text-[20px]">Learn skills with over 120k+</h5>
@@ -129,7 +129,7 @@ import Footer from '@components/Footer.astro';
 			</div> <!-- /.card-wrapper -->
 		</div> <!-- /.container -->
 
-		<img src="images/lazy.svg" data-src="images/shape/shape_189.svg" alt="" class="lazy-img shapes shape-one absolute z-[-1] left-0 top-[4%] sm:!hidden xsm:!hidden">
+		<img src="images/lazy.svg" data-src="images/shape/shape_189.svg" alt="" class="lazy-img shapes shape-one absolute z-[-1] left-0 md:-top-10 lg:-top-10 xl:top-[4%] sm:!hidden xsm:!hidden">
 	</div>
 
 
